Fix overflow in textbox node

--- a/style.css
+++ b/style.css
@@ -42,84 +42,84 @@ main {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+}
 
-  .textbox-container {
-    aspect-ratio: 4 / 1;
-    width: 100%;
+.textbox-container {
+  aspect-ratio: 4 / 1;
+  width: 100%;
+  background-color: cadetblue;
+  outline: 0.25rem solid color-mix(in oklab, darkgray 75%, white);
+  border: 0.25rem solid color-mix(in oklab, darkgray 90%, black);
+  border-top-width: 0.35rem;
+  border-radius: 0.5rem;
+  box-shadow:
+    inset 0 0 0 0.175rem color-mix(in oklab, black 10%, transparent),
+    inset 0 1.5rem 0 0 color-mix(in oklab, white 10%, transparent);
+  padding: 0 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  overflow-x: hidden;
 
-    div {
-      background-color: cadetblue;
-      outline: 0.25rem solid color-mix(in oklab, darkgray 75%, white);
-      border: 0.25rem solid color-mix(in oklab, darkgray 90%, black);
-      border-top-width: 0.35rem;
-      border-radius: 0.5rem;
-      height: 100%;
-      width: 100%;
+  div {
+    font-size: 2.5rem;
+    font-family: monospace;
+    text-align: start;
+    overflow-x: hidden;
+    max-width: 100%;
+    text-overflow: ellipsis;
 
-      box-shadow:
-        inset 0 0 0 0.175rem color-mix(in oklab, black 10%, transparent),
-        inset 0 1.5rem 0 0 color-mix(in oklab, white 10%, transparent);
-
-      display: flex;
-      align-items: center;
-      justify-content: end;
-      font-size: 2.5rem;
-      font-family: monospace;
-      text-align: end;
-      padding: 0 1rem;
-
-      color: color-mix(in oklab, cadetblue 50%, black);
-    }
+    color: color-mix(in oklab, cadetblue 50%, black);
   }
-  .numbers-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 0.75rem;
+}
+.numbers-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.75rem;
 
-    button {
-      --bg: white;
-      --fg: black;
+  button {
+    --bg: white;
+    --fg: black;
 
-      border: none;
-      aspect-ratio: 4 / 3;
-      border-radius: 0.75rem;
+    border: none;
+    aspect-ratio: 4 / 3;
+    border-radius: 0.75rem;
+    background-color: var(--bg);
+    color: var(--fg);
+    box-shadow:
+      0 0.25rem 0 0 color-mix(in oklab, var(--bg) 75%, black),
+      0 0.25rem 0 0.125rem color-mix(in oklab, black 37%, transparent);
+
+    font-size: 1.5rem;
+    transition:
+      25ms transform,
+      background-color;
+
+    &.act {
+      --bg: steelblue;
+      --fg: white;
+    }
+    &.num {
+      --bg: lightgray;
+    }
+    &.equ {
+      --bg: chocolate;
+      --fg: white;
+    }
+
+    &[data-action='0'] {
+      grid-column: span 2;
+      aspect-ratio: initial;
+    }
+
+    &:hover {
+      background-color: color-mix(in oklab, var(--bg) 95%, black);
+    }
+
+    &:active {
       background-color: var(--bg);
-      color: var(--fg);
-      box-shadow:
-        0 0.25rem 0 0 color-mix(in oklab, var(--bg) 75%, black),
-        0 0.25rem 0 0.125rem color-mix(in oklab, black 37%, transparent);
-
-      font-size: 1.5rem;
-      transition:
-        25ms transform,
-        background-color;
-
-      &.act {
-        --bg: steelblue;
-        --fg: white;
-      }
-      &.num {
-        --bg: lightgray;
-      }
-      &.equ {
-        --bg: chocolate;
-        --fg: white;
-      }
-
-      &[data-action='0'] {
-        grid-column: span 2;
-        aspect-ratio: initial;
-      }
-
-      &:hover {
-        background-color: color-mix(in oklab, var(--bg) 95%, black);
-      }
-
-      &:active {
-        background-color: var(--bg);
-        transform: translateY(0.25rem);
-        box-shadow: 0 0 0 0.125rem color-mix(in oklab, black 37%, transparent);
-      }
+      transform: translateY(0.25rem);
+      box-shadow: 0 0 0 0.125rem color-mix(in oklab, black 37%, transparent);
     }
   }
 }
